--- a/ChatAppWorkspace/ChatLib/ChatLib.vcxproj
+++ b/ChatAppWorkspace/ChatLib/ChatLib.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Buffer.h" />
+    <ClInclude Include="Common.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
