--- a/ChatAppWorkspace/ChatLib/ChatLib.vcxproj.filters
+++ b/ChatAppWorkspace/ChatLib/ChatLib.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Buffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
